name:                hktest
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
-- category:            
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    HKTest
  build-depends:       base                >= 4.6 && <4.7
                     , blaze-html
                     , bytestring
                     , cmdargs
                     , happstack-server    >= 7.3
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010

executable server
  main-is:             Server.hs
  build-depends:       base >=4.6 && <4.7
                     , hktest
  hs-source-dirs:      exe
  default-language:    Haskell2010
